# wealthfolio

./: .env.web.example  Cargo.toml  README.md  compose.yml  package.json
.github/: FUNDING.yml
.github/workflows/: build-windows.yml
apps/frontend/: addon-sandbox.html  index.html  package.json  vite.config.ts
apps/frontend/public/: addon-sandbox.css  splash.css
apps/frontend/src/: App.tsx  main.tsx  routes.tsx
apps/server/: README.md
apps/server/src/: api.rs  auth.rs  main.rs  main_lib.rs  oidc.rs
apps/server/tests/: oidc.rs
apps/tauri/: tauri.conf.json
apps/tauri/capabilities/: desktop.json
apps/tauri/src/: lib.rs  menu.rs  updater.rs
crates/agent-tools/: Cargo.toml
crates/agent-tools/src/: catalog.rs  scope.rs
crates/agent-tools/src/tools/: activity_import.rs  asset_classification.rs  categorization_context.rs  commit_activity.rs  create_categorization_rule.rs  mod.rs  propose_categories.rs  record_activities.rs  record_activity.rs
crates/ai/src/: provider_model.rs  provider_service.rs  types.rs
crates/ai/tests/: tool_outputs_parity.rs  tool_schemas.rs
crates/device-sync/src/: types.rs
crates/spending/src/: activity_allocations.rs  activity_classification.rs  lib.rs
dev/keycloak/: realm-wealthfolio.json
docs/addons/: addon-api-reference.md  addon-architecture.md  addon-getting-started.md  addon-migration-guide-v2-to-v3.md  addon-migration-guide-v3.5-to-v3.6.md  addon-packages.md  addon-platform-refactor-plan.md  addons-overview.md
docs/architecture/: cli-mcp-agent-access.md
e2e/: 02-activities.spec.ts
(+368 files in other folders)
